--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   firebase_core:
   get :
   flutter_login:
+  cloud_firestore:
+  google_sign_in:
+  google_fonts:
+  font_awesome_flutter:
+  cherry_toast:
+  video_player:
 
 dev_dependencies:
   flutter_test:
